--- a/module-3/02_CSS_Selectors/exercise-student/style.css
+++ b/module-3/02_CSS_Selectors/exercise-student/style.css
@@ -7,11 +7,94 @@ html {
   font-size: 16px;
 }
 
+aside{
+  border-right: 1px solid rgba(0, 173, 238, 0.4);
+  height: 100vh;
+  position: fixed;
+  padding: 20px 20px;
+  width: 200px;
+}
+
+aside>img{
+  display: block;
+  height: 120px;
+  margin: 0 auto;
+}
+
+aside>nav>ul>li{
+  border-bottom: 1px solid rgba(0, 173, 238, 0.4);
+  list-style: none;
+  line-height: 2;
+  margin: 10px auto;
+  padding-bottom:10px;
+  text-align: center;
+  text-transform: uppercase;
+  width: 80%;
+}
+aside>nav>ul>li>a{
+  font-weight: bold;
+  color: #00ADEE;
+  text-decoration: none;
+}
+aside>nav>ul>li>a:hover{
+  text-decoration: underline;
+}
+main{
+  margin-left: 200px;
+  padding: 20px 20px;
+}
+
+header{
+  height: 120px;
+}
+header>img{
+  height: 80%;
+}
+.banner{
+  display: block;
+  width: 100%;
+}
+
 body {
   background-color: rgba(192, 192, 192, 0.1);
 }
+
+section>div{
+  display: inline-block;
+  width: 33%;
+  padding-right: 20px;
+  margin-top: 20px;
+  vertical-align: top;
+}
+section>div>h2{
+  color:#8CC36F;
+}
+section>div>h2>i{
+  margin-right: 10px;
+}
+
+/*EXTRA CREDIT:*/
+div:not(#contact-us){
+  border-right: 1px solid rgba(170, 239, 135, 0.8);
+  padding-left: 20px;
+}
+
+div:last-child{
+  padding-left: 20px;
+}
+
 
 ul {
   margin: 0;
   padding: 0;
 }
+/*LAST TWO CSS rules W/O EXTRA CREDIT:*/
+/*
+#what-we-do, #our-work{
+  border-right: 1px solid rgba(170, 239, 135, 0.8);
+  padding-left: 20px;
+}
+#our-work, #contact-us{
+  padding-left: 20px;
+}
+*/
