--- a/module-3/03_CSS_Grid/tutorial-student/styles.css
+++ b/module-3/03_CSS_Grid/tutorial-student/styles.css
@@ -5,6 +5,9 @@
 body {
     margin: 0;
     padding: 0;
+    display: grid;
+    grid-template-columns: 300px 1fr 250px;
+    gap: 15px;
 }
 
 #left-panel > hr {
@@ -69,6 +72,7 @@ a[target*=_blank]:hover {
 .active-left-menu {
     background-color: rgba(135, 206, 250, 0.5);
     border-radius: 0 30px 30px 0;
+
 }
 
 #left-panel > nav > menu > li.active-left-menu > a {
@@ -97,4 +101,29 @@ aside article header {
 
 aside hr {
     width: 80%;
+}
+
+@media screen and (max-width: 800px){
+    body {
+        grid-template-columns: 100%;
+        justify-items: center;
+    }
+    #left-panel > nav > menu{
+        margin: 5px auto;
+    }
+    #left-panel > nav > menu > li {
+        padding: 0 7px;
+        display: inline-block;
+    }
+    #left-panel > nav > menu > li > a {
+        margin: 0;
+    }
+    .active-left-menu, #left-panel > nav > menu > li:hover {
+        border-radius: 30px;
+    }
+    main h3 {
+        text-align: center;
+        margin: 0;
+    }
+
 }
