--- a/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-1/main.css
+++ b/module-3/04_Flexbox/exercise-student/mini-exercises/header/step-1/main.css
@@ -1,11 +1,12 @@
 body {
   margin: 20px;
-  padding: 0
+  padding: 0;
 }
 
 header {
   background-color: #F0F0F0;
   padding: 20px;
+  display: flex;
 }
 
 .logo {
@@ -16,6 +17,7 @@ ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: flex;
 }
 
 li {
@@ -25,12 +27,14 @@ li {
   color: #707070;
   padding: 0 20px 0 0;
   margin-left: 20px;
+  
 }
 
 a,
 a:visited {
   color: #707070;
   text-decoration: none;
+  
 }
 
 a:hover {
